btn stuck effect was fixed, added 'bc' to the line 307

--- a/html-css/module-6/css/styles.css
+++ b/html-css/module-6/css/styles.css
@@ -373,17 +373,17 @@ footer {
 .txt {
   font-size: 15px;
   line-height: 24px;
-  color: #333333;
+  color: #999999;
   font-family: "Roboto";
   font-weight: 300;
-  font-style: italic;
+  /* font-style: italic; */
   background: #ffffff;
   border: 1px solid #e7e7e7;
   /* padding: 7px 45px 7px 10px;
     margin-right: 5px; */
   /* OR */
   width: 220px;
-  height: 40px;
+  height: 38px;
   border-right: none;
   padding-left: 10px;
   margin-right: -5px;
@@ -403,6 +403,7 @@ footer {
   width: 150px;
   height: 42px;
 }
-input::-moz-placeholder {
+.txt::placeholder {
   color: #cccccc;
+  font-style: italic;
 }
